Add .gitignore and update build files for new source files

--- a/Debug/makefile
+++ b/Debug/makefile
@@ -33,34 +33,34 @@ $(wildcard ../makefile.init) \
 $(wildcard ../makefile.targets) \
 
 
-BUILD_ARTIFACT_NAME := led
+BUILD_ARTIFACT_NAME := cmpe443-traffic-light
 BUILD_ARTIFACT_EXTENSION := elf
 BUILD_ARTIFACT_PREFIX :=
 BUILD_ARTIFACT := $(BUILD_ARTIFACT_PREFIX)$(BUILD_ARTIFACT_NAME)$(if $(BUILD_ARTIFACT_EXTENSION),.$(BUILD_ARTIFACT_EXTENSION),)
 
 # Add inputs and outputs from these tool invocations to the build variables 
 EXECUTABLES += \
-led.elf \
+cmpe443-traffic-light.elf \
 
 MAP_FILES += \
-led.map \
+cmpe443-traffic-light.map \
 
 SIZE_OUTPUT += \
 default.size.stdout \
 
 OBJDUMP_LIST += \
-led.list \
+cmpe443-traffic-light.list \
 
 
 # All Target
 all: main-build
 
 # Main-build Target
-main-build: led.elf secondary-outputs
+main-build: cmpe443-traffic-light.elf secondary-outputs
 
 # Tool invocations
-led.elf led.map: $(OBJS) $(USER_OBJS) /home/omerfaruk/STM32CubeIDE/workspace_1.17.0/led/STM32L552ZETXQ_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "led.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m33 -T"/home/omerfaruk/STM32CubeIDE/workspace_1.17.0/led/STM32L552ZETXQ_FLASH.ld" --specs=nosys.specs -Wl,-Map="led.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+cmpe443-traffic-light.elf cmpe443-traffic-light.map: $(OBJS) $(USER_OBJS) /home/omerfaruk/STM32CubeIDE/workspace_1.17.0/cmpe443-traffic-light/STM32L552ZETXQ_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "cmpe443-traffic-light.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m33 -T"/home/omerfaruk/STM32CubeIDE/workspace_1.17.0/cmpe443-traffic-light/STM32L552ZETXQ_FLASH.ld" --specs=nosys.specs -Wl,-Map="cmpe443-traffic-light.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -69,14 +69,14 @@ default.size.stdout: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	@echo 'Finished building: $@'
 	@echo ' '
 
-led.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "led.list"
+cmpe443-traffic-light.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "cmpe443-traffic-light.list"
 	@echo 'Finished building: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) default.size.stdout led.elf led.list led.map
+	-$(RM) cmpe443-traffic-light.elf cmpe443-traffic-light.list cmpe443-traffic-light.map default.size.stdout
 	-@echo ' '
 
 secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST)
